# correcthorse

./: Cargo.toml  build.rs
src/: cli.rs  lib.rs  main.rs  random.rs  words.rs
