[package]
name = "correcthorse"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
clap = { version = "4", features = ["derive"] }

[profile.release]
codegen-units = 1
incremental = true
lto = true
opt-level = "z"
strip = true

[[bin]]
name = "ch"
path = "src/main.rs"
